--- a/userClient/src/simulationDetails/worldDetails/rule/actions/increase/Increase.fxml
+++ b/userClient/src/simulationDetails/worldDetails/rule/actions/increase/Increase.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="simulationDetails.worldDetails.rule.actions.increase.IncreaseController">
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="simulationDetails.worldDetails.rule.actions.increase.IncreaseController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
@@ -19,8 +19,8 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Main Entity Name:" />
-            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="184.0" />
+            <Label prefHeight="19.0" prefWidth="114.0" styleClass="action-label-title" text="Main Entity Name:" />
+            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="170.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
@@ -29,7 +29,7 @@
       <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
             <Label styleClass="action-label-title" text="Secondary Entity Name:" />
-            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="147.0" />
+            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="134.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
