--- a/userClient/src/simulationDetails/worldDetails/rule/actions/kill/Kill.fxml
+++ b/userClient/src/simulationDetails/worldDetails/rule/actions/kill/Kill.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="simulationDetails.worldDetails.rule.actions.kill.KillController">
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="simulationDetails.worldDetails.rule.actions.kill.KillController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
@@ -20,7 +20,7 @@
       <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
             <Label styleClass="action-label-title" text="Main Entity Name:" />
-            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="180.0" />
+            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="167.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
@@ -29,7 +29,7 @@
       <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
             <Label styleClass="action-label-title" text="Secondary Entity Name:" />
-            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="143.0" />
+            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="135.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
