--- a/adminClient/src/body/firstPagemanagement/managementBody.fxml
+++ b/adminClient/src/body/firstPagemanagement/managementBody.fxml
@@ -33,12 +33,15 @@
                   <Insets right="10.0" />
                </padding>
             </HBox>
-            <HBox prefHeight="450.0" prefWidth="1000.0">
+            <HBox prefHeight="495.0" prefWidth="990.0">
                <children>
-                  <Pane fx:id="paneSimulationsDetails" prefHeight="450.0" prefWidth="818.0" />
-                  <Pane fx:id="paneThreadPool" prefHeight="450.0" prefWidth="312.0">
+                  <Pane fx:id="paneSimulationsDetails" prefHeight="473.0" prefWidth="750.0" stylesheets="@../../style/defaultPage.css">
                      <children>
-                        <VBox alignment="CENTER" layoutX="4.0" layoutY="9.0" prefHeight="433.0" prefWidth="235.0">
+                        <fx:include source="simulationDetails/Details.fxml" />
+                     </children></Pane>
+                  <Pane fx:id="paneThreadPool" prefHeight="473.0" prefWidth="252.0">
+                     <children>
+                        <VBox alignment="CENTER" layoutX="10.0" layoutY="9.0" prefHeight="433.0" prefWidth="243.0">
                            <children>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                                  <children>
