--- a/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/entity/EntityDetails.fxml
+++ b/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/entity/EntityDetails.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" fillWidth="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="489.0" spacing="10.0" styleClass="bodyPanes" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.entity.EntityDetailsController">
+<VBox alignment="CENTER" fillWidth="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="440.0" spacing="10.0" styleClass="bodyPanes" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.entity.EntityDetailsController">
    <children>
-      <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="630.0" spacing="10.0">
+      <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="387.0" spacing="10.0">
          <children>
             <Label styleClass="label-title" text="Name:" />
             <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="283.0" />
@@ -20,7 +20,7 @@
             <Insets left="15.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="630.0">
+      <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="406.0">
          <children>
             <Label prefHeight="17.0" prefWidth="96.0" styleClass="label-title" text="Properties:">
                <HBox.margin>
@@ -33,13 +33,13 @@
       </HBox>
       <ScrollPane>
          <content>
-            <TableView fx:id="propertiesTableView" prefHeight="330.0" prefWidth="450.0">
+            <TableView fx:id="propertiesTableView" prefHeight="168.0" prefWidth="410.0">
               <columns>
-                  <TableColumn fx:id="nameCol" maxWidth="180.0" minWidth="63.33336126804352" prefWidth="64.66667425632477" text="Name" />
-                <TableColumn fx:id="typeCol" maxWidth="216.66665649414062" minWidth="94.00003051757812" prefWidth="94.00003051757812" text="Type" />
-                <TableColumn fx:id="fromCol" maxWidth="221.99996948242188" minWidth="56.0" prefWidth="90.0" text="Range - from" />
-                  <TableColumn fx:id="toCol" maxWidth="265.99993896484375" minWidth="69.33328247070312" prefWidth="73.99996948242188" text="Range - to" />
-                  <TableColumn fx:id="randomCol" maxWidth="281.3333435058594" minWidth="113.99990844726562" prefWidth="119.99990844726562" text="Is random initialize" />
+                  <TableColumn fx:id="nameCol" maxWidth="180.0" minWidth="63.33336126804352" prefWidth="76.0" text="Name" />
+                <TableColumn fx:id="typeCol" maxWidth="216.66665649414062" minWidth="71.0" prefWidth="71.0" text="Type" />
+                <TableColumn fx:id="fromCol" maxWidth="221.99996948242188" minWidth="56.0" prefWidth="85.0" text="Range - from" />
+                  <TableColumn fx:id="toCol" maxWidth="265.99993896484375" minWidth="69.33328247070312" prefWidth="71.0" text="Range - to" />
+                  <TableColumn fx:id="randomCol" maxWidth="281.3333435058594" minWidth="113.99990844726562" prefWidth="141.0" text="Is random initialize" />
               </columns>
             </TableView>
          </content>
