--- a/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/rule/actions/calculation/Calculation.fxml
+++ b/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/rule/actions/calculation/Calculation.fxml
@@ -6,57 +6,57 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="vBox" prefHeight="350.0" prefWidth="350.0" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.rule.actions.calculation.CalculationController">
+<VBox fx:id="vBox" prefHeight="328.0" prefWidth="226.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.rule.actions.calculation.CalculationController">
    <children>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="54.0" prefWidth="225.0" spacing="2.0">
          <children>
-            <Label styleClass="action-label-title" text="Name:" />
-            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="239.0" />
+            <Label styleClass="action-text-variable" text="Name:" />
+            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="161.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="54.0" prefWidth="225.0" spacing="2.0">
          <children>
-            <Label styleClass="action-label-title" text="Main Entity Name:" />
-            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="188.0" />
+            <Label styleClass="action-text-variable" text="Main Entity Name:" />
+            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="115.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="54.0" prefWidth="225.0" spacing="2.0">
          <children>
-            <Label styleClass="action-label-title" text="Secondary Entity Name:" />
-            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="143.0" />
+            <Label styleClass="action-text-variable" text="Secondary Entity Name:" />
+            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="90.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="54.0" prefWidth="225.0" spacing="2.0">
          <children>
-            <Label styleClass="action-label-title" text="Argument 1:" />
-            <Text fx:id="arg1VariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="209.0" />
+            <Label styleClass="action-text-variable" text="Argument 1:" />
+            <Text fx:id="arg1VariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="140.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="54.0" prefWidth="225.0" spacing="2.0">
          <children>
-            <Label styleClass="action-label-title" text="Argument 2:" />
-            <Text fx:id="arg2VariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="210.0" />
+            <Label styleClass="action-text-variable" text="Argument 2:" />
+            <Text fx:id="arg2VariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="136.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="54.0" prefWidth="225.0" spacing="2.0">
          <children>
-            <Label styleClass="action-label-title" text="Arithmetic:" />
-            <Text fx:id="arithmeticVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="222.0" />
+            <Label styleClass="action-text-variable" text="Arithmetic:" />
+            <Text fx:id="arithmeticVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="149.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="10.0" />
@@ -64,6 +64,6 @@
       </HBox>
    </children>
    <padding>
-      <Insets left="20.0" right="5.0" />
+      <Insets right="5.0" />
    </padding>
 </VBox>
