--- a/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/rule/actions/increase/Increase.fxml
+++ b/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/rule/actions/increase/Increase.fxml
@@ -1,58 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.rule.actions.increase.IncreaseController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
+
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="226.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.rule.actions.increase.IncreaseController">
    <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="65.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Name:" />
-            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="231.0" />
+            <Label styleClass="action-text-variable" text="Name:" />
+            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="166.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets left="5.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Main Entity Name:" />
-            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="184.0" />
+            <Label styleClass="action-text-variable" text="Main Entity Name:" />
+            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="108.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets left="5.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Secondary Entity Name:" />
-            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="147.0" />
+            <Label styleClass="action-text-variable" text="Secondary Entity Name:" />
+            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="81.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets left="5.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Property:" />
-            <Text fx:id="propertyVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="213.0" />
+            <Label styleClass="action-text-variable" text="Property:" />
+            <Text fx:id="propertyVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="152.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets left="5.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="By:" />
-            <Text fx:id="byVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="241.0" />
+            <Label styleClass="action-text-variable" text="By:" />
+            <Text fx:id="byVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="179.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets left="5.0" />
          </VBox.margin>
       </HBox>
    </children>
    <padding>
-      <Insets left="20.0" right="5.0" />
+      <Insets right="5.0" />
    </padding>
 </VBox>
