--- a/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/rule/actions/kill/Kill.fxml
+++ b/adminClient/src/body/firstPagemanagement/simulationDetails/worldDetails/rule/actions/kill/Kill.fxml
@@ -2,39 +2,38 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.rule.actions.kill.KillController">
+
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="226.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPagemanagement.simulationDetails.worldDetails.rule.actions.kill.KillController">
    <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="105.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Name:" />
-            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="232.0" />
+            <Label styleClass="action-text-variable" text="Name:" />
+            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="165.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="105.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Main Entity Name:" />
-            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="180.0" />
+            <Label styleClass="action-text-variable" text="Main Entity Name:" />
+            <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="113.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="320.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="105.0" prefWidth="226.0" spacing="10.0">
          <children>
-            <Label styleClass="action-label-title" text="Secondary Entity Name:" />
-            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="143.0" />
+            <Label styleClass="action-text-variable" text="Secondary Entity Name:" />
+            <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="86.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
    </children>
-   <padding>
-      <Insets left="20.0" right="5.0" />
-   </padding>
 </VBox>
