--- a/userClient/src/requests/Requests.fxml
+++ b/userClient/src/requests/Requests.fxml
@@ -79,7 +79,7 @@
                   <Label styleClass="topLabels" stylesheets="@../style/defaultPage.css" text="Requests Table" />
                   <ScrollPane fitToHeight="true" fitToWidth="true">
                      <content>
-                        <TableView fx:id="requestsTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="798.0">
+                        <TableView fx:id="requestsTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#tableRowClicked" prefHeight="290.0" prefWidth="798.0">
                           <columns>
                             <TableColumn fx:id="serialNumberCol" maxWidth="133.0" minWidth="133.0" prefWidth="133.0" text="Serial number" />
                             <TableColumn fx:id="worldNameCol" maxWidth="133.0" minWidth="133.0" prefWidth="133.0" text="World name" />
